# murmurations

./: .gitignore  CMakeLists.txt  README.md  index.html  main.js  murmur.js
boids/: boids.pde
include/: Boid.hpp  Flock.hpp  FlockingStrategy.hpp  Helpers.hpp  Shader.hpp
scripts/: murmur.js
src/: Boid.cpp  Flock.cpp  FlockingStrategy.cpp  Helpers.cpp  Main.cpp  Shader.cpp  main.cpp
